[gd_scene load_steps=14 format=2]

[ext_resource path="res://Enemy/Mobs/Slime/Slime.gd" type="Script" id=1]
[ext_resource path="res://Enemy/Mobs/Slime/State/Patrol.gd" type="Script" id=2]
[ext_resource path="res://Enemy/Mobs/Slime/State/Dead.gd" type="Script" id=3]
[ext_resource path="res://Enemy/Mobs/Slime/State/Hit.gd" type="Script" id=4]
[ext_resource path="res://Effects/Leaf_test-Recovered.png" type="Texture" id=5]
[ext_resource path="res://Enemy/Mobs/MobHealth/HealthBarMob.tscn" type="PackedScene" id=6]
[ext_resource path="res://Enemy/Mobs/Slime/State/ProcessHit.gd" type="Script" id=7]
[ext_resource path="res://Enemy/Mobs/Slime/State/Search.gd" type="Script" id=8]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 6, 2 )

[sub_resource type="CircleShape2D" id=2]

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 4, 1 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 5, 1 )

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 5, 2 )

[node name="Slime" type="KinematicBody2D"]
scale = Vector2( 3, 3 )
collision_layer = 8
script = ExtResource( 1 )

[node name="Collision" type="CollisionShape2D" parent="."]
position = Vector2( 0, -2 )
shape = SubResource( 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="Rotate" type="Node2D" parent="."]
__meta__ = {
"_edit_lock_": true
}

[node name="Sprite" type="Sprite" parent="Rotate"]
position = Vector2( 0, -3 )
scale = Vector2( 1, 0.3 )
texture = ExtResource( 5 )
__meta__ = {
"_edit_lock_": true
}

[node name="RayDown" type="RayCast2D" parent="Rotate"]
visible = false
position = Vector2( 7, -1 )
enabled = true
cast_to = Vector2( 0, 2 )
collision_mask = 1025
collide_with_areas = true
__meta__ = {
"_edit_lock_": true
}

[node name="RayFront" type="RayCast2D" parent="Rotate"]
visible = false
position = Vector2( 6, -2 )
enabled = true
cast_to = Vector2( 2, 0 )
collision_mask = 1025
collide_with_areas = true
__meta__ = {
"_edit_lock_": true
}

[node name="RayPlayerFront" type="RayCast2D" parent="Rotate"]
visible = false
position = Vector2( 6, -2 )
enabled = true
cast_to = Vector2( 1080, 0 )
collision_mask = 1026
collide_with_areas = true
__meta__ = {
"_edit_lock_": true
}

[node name="RayPlayerBack" type="RayCast2D" parent="Rotate"]
position = Vector2( 6, -2 )
enabled = true
cast_to = Vector2( -1080, 0 )
collision_mask = 1026
collide_with_areas = true
__meta__ = {
"_edit_lock_": true
}

[node name="Animation" type="AnimationPlayer" parent="."]

[node name="States" type="Node" parent="."]

[node name="Patrol" type="Node" parent="States"]
script = ExtResource( 2 )

[node name="ProcessHit" type="Node" parent="States"]
script = ExtResource( 7 )

[node name="Hit" type="Node" parent="States"]
script = ExtResource( 4 )

[node name="Dead" type="Node" parent="States"]
script = ExtResource( 3 )

[node name="Search" type="Node" parent="States"]
script = ExtResource( 8 )

[node name="AOSBox" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 0
__meta__ = {
"_edit_lock_": true
}

[node name="AOSCollision" type="CollisionShape2D" parent="AOSBox"]
position = Vector2( 0, -1 )
shape = SubResource( 2 )
__meta__ = {
"_edit_lock_": true
}

[node name="DamageBox" type="Area2D" parent="."]
visible = false
collision_layer = 4
collision_mask = 0
__meta__ = {
"_edit_lock_": true
}

[node name="DamageCollision" type="CollisionShape2D" parent="DamageBox"]
position = Vector2( 0, -1 )
shape = SubResource( 3 )
__meta__ = {
"_edit_lock_": true
}

[node name="JumpBox" type="Area2D" parent="."]
visible = false
collision_layer = 0
collision_mask = 0
__meta__ = {
"_edit_lock_": true
}

[node name="JumpCollision" type="CollisionShape2D" parent="JumpBox"]
position = Vector2( 0, -4 )
shape = SubResource( 4 )
one_way_collision = true
__meta__ = {
"_edit_lock_": true
}

[node name="HitBox" type="Area2D" parent="."]
visible = false
collision_layer = 16
collision_mask = 18
__meta__ = {
"_edit_lock_": true
}

[node name="HitCollision" type="CollisionShape2D" parent="HitBox"]
position = Vector2( 0, -2 )
shape = SubResource( 5 )
__meta__ = {
"_edit_lock_": true
}

[node name="HealthBar" parent="." instance=ExtResource( 6 )]
margin_left = -1.5
margin_top = -5.0
margin_right = -1.5
margin_bottom = -5.0
rect_scale = Vector2( 0.02, 0.02 )
[connection signal="body_entered" from="AOSBox" to="." method="_on_AOSBox_body_entered"]
[connection signal="body_exited" from="AOSBox" to="." method="_on_AOSBox_body_exited"]
[connection signal="area_entered" from="HitBox" to="." method="_on_HitBox_area_entered"]
